# TE2022

./: README.md
Documentation/: README.md
RoboCup rescue maze/V2/: Maze_programm_v0.1.ino  README.md  arduino_for_pico.ino  chto-to_lidar.ino  colsen_tcs.ino  forward_pico.ino  lidar_noname(1).py  pico_complects.ino  pico_motors.ino
RoboCup rescue maze/V2/try_slam/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  ert.txt  main.cpp  rpi_slam  rpit.txt  testrpi.txt
RoboCup rescue maze/V2/try_slam/include/: Explorer.hpp  LidarReader.hpp  Map.hpp  Map.hpp.save  MotorController.hpp  RobotConfig.hpp  SLAM.hpp  SLAM.hpp.bak  SLAM.hpp.save  SerialBus.hpp  mySerial.h
RoboCup rescue maze/V2/try_slam/src/: Explorer.cpp  LidarReader.cpp  LidarReader.cpp.sav  LidarReader.cpp.save  LidarReader.cppy  Map.cpp  Map.cpp.save  MotorController.cpp  SLAM.cpp  SLAM.cpp.bak  SLAM.cpp.save  SLAM1.cpp  SerialBus.cpp  mySerial.cpp
WorksBeslnGetagazov/: README.md
